--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
   background-color: white;
   padding: 10px;
   border-radius: 5px;
-/*  box-shadow: 0 2px 5px rgba(0,0,0,0.2);*/
+  position: relative;
+  z-index: 9999;
 }
 
 .algorithm-escape-toggle {
