--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+/*body {
+  display: none;
+}*/
+
 @keyframes sparkle {
     0% { transform: scale(0); opacity: 0; }
     50% { transform: scale(1); opacity: 1; }
