--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@
   display: none;
 }*/
 
+[role="main"] > div {
+  display: none !important;
+}
+
 @keyframes sparkle {
   0% {
     transform: scale(0);
